ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: ejbca/ejbca-ingress-auth
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header SSL_CLIENT_CERT $ssl_client_cert;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
  name: ejbca-node1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ejbca-node1.test
    secretName: ejbca-ingress-tls
  rules:
  - host: ejbca-node1.test
    http:
      paths:
      - path: /ejbca/
        pathType: Prefix
        backend:
          service:
            name: ejbca-service
            port:
              name: ejbca-https
